kubernetes-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ytclone-service
spec:
  selector:
    app: ytclone
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
